--- a/templates/operations.ejs
+++ b/templates/operations.ejs
@@ -1,3 +1,5 @@
+<a href="" class="save-document">Save</a>
+
 <h2>Operations</h2>
 <div class="operations">
   <% _.each(_.clone(operations).reverse(), function(o) { %>
