Getting tools ready.

--- a/layouts/app.html
+++ b/layouts/app.html
@@ -45,8 +45,13 @@
   </head>
   <body>
     <div id="header">
-      Substance Composer
+      <h1>Substance Composer</h1>
+      <div class="actions">
+        <a href="#" class="save-document">Save</a>
+        <a href="#" class="new-document">New</a>
+      </div>
     </div>
+    
     <div id="container">
 
     </div>
