--- a/styles/main.less
+++ b/styles/main.less
@@ -4,7 +4,11 @@
 @import "mixins.less";
 
 @import "layout.less";
-@import "operations.less";
+@import "tools.less";
+@import "comments.less";
+@import "patches.less";
+@import "history.less";
+
 
 @import "document/document.less";
 @import "document/node.less";
