--- a/templates/tools.ejs
+++ b/templates/tools.ejs
@@ -1,10 +1,18 @@
 <div class="tools">
+
+
   <div class="navigation">
     <a class="toggle-tool outline" href="#">Outline</a>
     <a class="toggle-tool patches" href="#">Patches</a>
     <a class="toggle-tool comments" href="#">Comments</a>
     <a class="toggle-tool history" href="#">History</a>
   </div>
+
+  <div class="actions">
+    <a href="#" class="save-document">Save</a>
+    <a href="#" class="new-document">New</a>
+  </div>
+
   <div class="tool">
     This is the place where tools go.
   </div>
