--- a/layouts/app.html
+++ b/layouts/app.html
@@ -48,7 +48,7 @@
       <h1>Substance Composer</h1>
       <div class="actions">
         <a href="#" class="save-document">Save</a>
-        <a href="#" class="new-document">New</a>
+        <a href="#new" class="new-document">New</a>
       </div>
     </div>
     
