--- a/styles/tools.less
+++ b/styles/tools.less
@@ -1,7 +1,7 @@
 /* Tools
 -------------------------------------------------------------------------------*/
 
-#tools {
+#sidebar {
   background: #E9EAE5;
   overflow: auto;
   position: fixed;
