Multiple tabs with different users synchronize

--- a/layouts/app.html
+++ b/layouts/app.html
@@ -49,6 +49,10 @@
       <div class="actions">
         <a href="#" class="save-document">Save</a>
         <a href="#new" class="new-document">New</a>
+        <select class="username">
+          <option>michael</option>
+          <option>john</option>
+        </select>
       </div>
     </div>
     
