Simplified drop targets

--- a/styles/document/node.less
+++ b/styles/document/node.less
@@ -22,8 +22,8 @@
     opacity: 1.0;
   }
 
-  .drop-target {
-    height: 1em;
-    border: 2px dashed #ccc;
+  &.drop-before {
+    border-top: 2px dashed #ccc;
   }
+  
 }
