Added nested sections
Selecting and dragging out of a section work

--- a/styles/document/node/code.less
+++ b/styles/document/node/code.less
@@ -21,7 +21,7 @@
   margin: 10px 100px;
   line-height: 1.7em;
   font-size: 12px;
-  font-family: Monaco, Consolas, "Lucida Console", monospace;
+  font-family: inherit !important;
 }
 
 .CodeMirror-scroll {
