--- a/styles/document/node/section.less
+++ b/styles/document/node/section.less
@@ -3,7 +3,7 @@
 .content-node.section {
 }
 
-.content-node.section .content {
+.content-node.section > .content {
   font-weight: bold;
   font-size: 25px;
   line-height: 30px;
