--- a/styles/document/node/text.less
+++ b/styles/document/node/text.less
@@ -4,3 +4,8 @@
   padding: 10px 0;
   /*margin: 0 100px;*/
 }
+
+/* Inside a section, make sure the text is lined up */
+.content-node .content-node.text .content {
+  margin: 0 100px;
+}
