--- a/layouts/app.html
+++ b/layouts/app.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html>
   <head>
-    <title>Substance Composer</title>
+    <title>Composer</title>
     <link href="/styles.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="/codemirror/codemirror.css" media="screen" rel="stylesheet" type="text/css" />
     <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -45,7 +45,7 @@
   </head>
   <body>
     <div id="header">
-      <h1>Substance Composer</h1>
+      <h1>Composer</h1>
       <div class="actions">
         <a href="#" class="save-document">Save</a>
         <a href="#new" class="new-document">New</a>
@@ -53,7 +53,16 @@
     </div>
     
     <div id="container">
-
+      <p id="unique-id">This is a paragraph element in the HTML document and will be parsed as a node in the editor</p>
+      <p>Another paragraph with a link element. For now, inline elements show up as text but will be rendered as a tag in the future. <a href="http://example.com">link</a></p>
+      <div class="section">
+        <h2 class="title">This is a section with a title (in the HTML document)</h2>
+        <div class="section">
+          <h2 class="title">This is a SUBsection with a title</h2>
+          <p>This is a paragraph in the subsection</p>
+        </div>
+        <p>This is a paragraph in the section. Elements below will be automatically added by the server</p>
+      </div>
     </div>
     
     <div id="footer">
