Attempt to use existing elements (and classes) for editor nodes
If an HTML element with the same id as the model exists in the document
use it.

--- a/styles/document/node/section.less
+++ b/styles/document/node/section.less
@@ -13,7 +13,8 @@
   
 }
 
-.content-node.section .content {
+.content-node.section > .content {
+
   .CodeMirror {
     margin: 0px; // .section already sets the margin
     font-family: inherit !important;
