--- a/styles/document/node/text.less
+++ b/styles/document/node/text.less
@@ -1,11 +1,10 @@
 .content-node.selected.text > .operations { background: #459fc9; }
 
-.content-node.text .content {
+.content-node.text > .content {
   padding: 10px 0;
   /*margin: 0 100px;*/
 }
 
-/* Inside a section, make sure the text is lined up */
-.content-node .content-node.text .content {
-  margin: 0 100px;
+.content-node.text {
+  margin: 0;
 }
