--- a/styles/document/node/section.less
+++ b/styles/document/node/section.less
@@ -1,5 +1,7 @@
 .content-node.selected.section > .operations { background: #a5c54b; }
 
+@gray: #aaa;
+
 .content-node.section {
 }
 
@@ -15,6 +17,11 @@
 
 .content-node.section > .content {
 
+  & > p {
+    display: inline;
+    margin: 0px; // .section already sets the margin
+  }
+
   .CodeMirror {
     margin: 0px; // .section already sets the margin
     font-family: inherit !important;
@@ -24,41 +31,57 @@
   }
 }
 
-#document h1 {
+.section > h1 {
   counter-reset: sub-section;
   font-size: 30px;
+  font-weight: bold;
 }
 
-#document h2 {
-  counter-reset: composite
+.section > h2.content,
+.section > .section > h1 {
+  counter-increment: sub-section;
+  counter-reset: composite;
+  font-size: 20px !important;
+  margin-left: 45px !important;
 }
 
-#document h1:before{
+.section > h3.content,
+.section > .section > .section > h1 {
+  margin-left: 100px !important;
+}
+
+.section > h1::before {
   counter-increment: section;
   content: counter(section) " ";
  
+  color: @gray;
   font-weight: bold;
   margin-right: 20px;
 }
 
-#document h2:before{
-  counter-increment: sub-section;
+.section > h2.content::before,
+.section > .section > h1::before {
   content: counter(section) "." counter(sub-section) " ";
   
+  color: @gray;
   margin-right: 20px;
   font-weight: bold;
 }
 
-#document h3:before{
+.section > h3.content::before,
+.section > .section > .section > h1::before {
   counter-increment: composite;
+/*******
   content: counter(section) "." counter(sub-section) "." counter(composite) " ";
+********/
 
+  color: @gray;
   margin-right: 20px;
   font-weight: bold;
 }
 
 #document h1, #document h2, #document h3, #document h4, #document h5 {
-  font-weight: normal;
+  //font-weight: normal;
   margin: 0em 100px 0 55px;
   padding: 0;
   line-height: 1.6em;
