--- a/styles/document/node/text.less
+++ b/styles/document/node/text.less
@@ -2,9 +2,5 @@
 
 .content-node.text > .content {
   padding: 10px 0;
-  /*margin: 0 100px;*/
-}
-
-.content-node.text {
-  margin: 0;
+  margin: 0 100px;
 }
