--- a/styles/layout.less
+++ b/styles/layout.less
@@ -49,7 +49,7 @@ a:hover {
 }
 
 
-p { margin: 0 0 10px 0; }
+/* p { margin: 0 0 10px 0; } */
 p.info {
   font-style: italic;
   color: rgba(0, 0, 0, 0.7);
